Experiments left to do

--- a/biblio.bib
+++ b/biblio.bib
@@ -370,3 +370,26 @@
   year={1965},
   publisher={University of Michigan press}
 }
+
+
+@book{roman2008,
+   Author = {Roman, Steven},
+   Title = {Lattices and ordered sets},
+   Publisher = {Springer},
+      Year = {2008} }
+
+
+@article{tarski1955,
+   Author = {Tarski, Alfred},
+   Title = {A lattice-theoretical fixpoint theorem and its applications},
+   Journal = {Pacific journal of Mathematics},
+   Volume = {5},
+   Number = {2},
+   Pages = {285-309},
+      Year = {1955} }
+
+
+
+
+
+
